# GitHub-AI-Navigator

./: .env.example  .gitignore  slides.html
frontend/: api.js  manifest.json  mermaid.js  onboarding.html  onboarding.js  popup.html  popup.js  ppopup.js  styles.css
frontend/libs/: mermaid.min.js
frontend/scripts/: background.js
server/: functions-data.json  pyproject.toml  repo_analyser.db  requirements.txt  server.py  tree-data.json  weaviate.py
shared/: weave.js
