[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "llama-index==0.8.56",
    "llama-index-readers-github==0.1.0",
    "openai==1.3.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "sentence-transformers>=5.1.0",
    "weaviate-client>=4.16.9",
]
